# paper-lens

./: .gitignore  README.md  __init__.spec  main.py  paper-lens.spec  pyproject.toml
app/: controller.py
app/interface/: csv_input.py  main_window.py
app/logic/: __init__.py  file_manager.py  logger.py  spacy_task.py
tests/: paper_data.csv
