[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Andrea Gorletta <andrea.alice.gorletta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
spacy = "^3.8.4"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz"}
pyinstaller = "^6.12.0"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
pyqt5 = "^5.15.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "main:main"